# tmobile_order_status_bot_demo

./: .env.example  .gitignore  README.md  pyproject.toml
order_status_bot/: app.py  llm.py  models.py  orders.csv  orders.py
tests/: test_api.py  test_orders.py
