[tool.poetry]
name = "order-status-bot"
version = "0.1.0"
description = "A minimal order status chatbot backend using FastAPI and OpenAI function calling."
authors = ["Caleb Mieszko <calebmieszko@gmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { version = "^0.24.0", extras = ["standard"] }
pydantic = "^2.0"
openai = "^1.6"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
httpx = "^0.24"
ruff = "^0.1"
black = "^23.7"
anyio = "^3.6"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["anyio: mark test to run with anyio"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"